nginx-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue
  name: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue
  name: blue
spec:
  ports:
  - port: 9500
    protocol: TCP
    targetPort: 80
  selector:
    app: blue
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: blue.kubesample.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blue
              port:
                number: 9500
